--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
   <body background ="https://pro2-bar-s3-cdn-cf4.myportfolio.com/0a2557a2c6807bbc11edb056a110c6d0/f3524918-1de1-4d83-850c-2c08377a4be6_rw_1920.png?h=c64eabb8e2827cb9b15147103281a6e8">
     <div class="containerDiv">
-        <h1>Sea Creature Trivia Game!</h1>
+        <h1>Ocean Trivia Game!</h1>
         <div><h5 id = "timer"></h5></div>
         <div id = "questionDiv"></div>
         <div id = "answerChoices"></div>
